fix social spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,9 @@ footer {
 
 /* Social media icons */
 .social-media {
-    margin-top: 20px;
+    display: flex;
+    padding: 2px;
+    justify-content: center;
 }
 
 .social-media a {
